# 03Devops-2025

./: docker-compose1.yml
.github/workflows/: ci.yml
f_brain/: .env  docker-compose.yml
f_brain/.github/workflows/: cd.yml  ci.yml
f_brain/client/: .env  Dockerfile  README.md  package-lock.json  package.json  vite.config.js
f_brain/client/src/: App.css  App.jsx  main.jsx
f_brain/client/src/components/: HistoryChart.css  HistoryChart.jsx  HistoryList.css  HistoryList.jsx  SearchBar.css  SearchBar.jsx  WeatherCard.css  WeatherCard.jsx
f_brain/client/src/services/: weatherService.js
f_brain/proxy/: default.conf
f_brain/server/: Dockerfile  pyproject.toml  readme.md  requirements.txt
f_brain/server/server/weather/: api_views.py
f_brain/server/server_config/: settings.py  urls.py
f_brain/server/weather/: models.py  urls.py  views.py
