[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "IgorLandry1997",email = "njoungangigor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
