[project]
name = "weather"
version = "0.1.0"
description = "A simple weather application"
authors = [
    {name = "IgorLandry1997",email = "njoungangigor@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
